Fix routes, css for tags and dark mode

--- a/ui/static/css/style.css
+++ b/ui/static/css/style.css
@@ -26,6 +26,7 @@
     --color-dark: #f1faee;
     --color-light: #290149;
     --color-secondary: #e2cc7c;
+    --color-flash: #e17700;
   }
 }
 
